# youtube_music_dler

./: .pre-commit-config.yaml  README.md  cleanup.py  last_dled_channels.json  main.py  music_dler.py  pyproject.toml  setup.cfg  spliter.py
music_downloader/: cleanup.py  crop_covers.py  music_dler.py  spliter.py  tagger.py
