[metadata]
name = music-downloader
version = 1.0
description = Get your music from your favorite YT channels. Keep track of dled musics.
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    yt-dlp
    mutagen
    numpy
    opencv-python
    progressbar2

[options.entry_points]
console_scripts =
    music-dler = music_downloader.music_dler:main
    crop-covers = music_downloader.crop_covers:main

[isort]
profile = black
